--- a/src/app/exercice3/exercice3.component.html
+++ b/src/app/exercice3/exercice3.component.html
@@ -1,7 +1,7 @@
-<p *ngIf="statut">
+<p *ngIf="statut"><br>
   p1
 </p>
-<p *ngIf="!statut">
+<p *ngIf="!statut"><br>
   p2
 </p>
 <button (click)="statut=!statut">Changement de paragraphe</button>
